# yave

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DesignConcepts.drawio  README.md  azure-pipelines.yml  vcpkg.json
src/: CMakeLists.txt
src/yave/: CMakeLists.txt
src/yave-imgui/: CMakeLists.txt  application.cpp  basic_connection_drawer.cpp  basic_node_drawer.cpp  basic_socket_drawer.cpp  canvas.cpp  data_commands.cpp  data_type_socket.cpp  imgui_context.cpp  imgui_glfw_vulkan.cpp  info_window.cpp  layout.cpp  main.cpp  node_window.cpp  node_window_drawables.cpp  render.cpp  render_view_window.cpp  root_window.cpp  shader.hpp  shader.vert  vulkan_util.cpp  yave-imgui.cpp
src/yave-imgui/editor/: CMakeLists.txt  canvas.cpp  connection_view.cpp  editor_context.cpp  input_state.cpp  layout.cpp  node_view.cpp  render.cpp  socket_view.cpp  style.cpp
src/yave/app/: CMakeLists.txt  editor_context.cpp  node_compiler_thread.cpp  node_data_thread.cpp  project.cpp
src/yave/backend/: CMakeLists.txt  backend.cpp  external_backend.cpp
src/yave/compiler/: CMakeLists.txt  executable.cpp  init_pipeline.cpp  input.cpp  message.cpp  optimize.cpp  parse.cpp  pipeline.cpp  sema.cpp  typecheck.cpp  verify.cpp
src/yave/core/: CMakeLists.txt  id.cpp  log.cpp  uid.cpp  uuid.cpp
src/yave/data/: CMakeLists.txt
src/yave/editor/: CMakeLists.txt  compile_thread.cpp  data_command.cpp  data_context.cpp  editor_data.cpp  execute_thread.cpp  render_context.cpp  scene_config.cpp  serialize.cpp  update_channel.cpp  view_command.cpp  view_context.cpp
src/yave/frame_buffer/: CMakeLists.txt  frame_buffer.cpp  frame_buffer_manager.cpp
src/yave/frontend/: CMakeLists.txt  node_data_thread.cpp
src/yave/glfw/: glfw_context.cpp
src/yave/graph/: CMakeLists.txt
src/yave/image/: CMakeLists.txt  image.cpp  image_view.cpp
src/yave/imgui/: CMakeLists.txt  imgui_context.cpp  shader.frag
src/yave/interface/: CMakeLists.txt  error_list_wrapper.cpp  node_tree.cpp  root_manager.cpp
src/yave/lib/: CMakeLists.txt
src/yave/module/: CMakeLists.txt
src/yave/node/: CMakeLists.txt  bind_info.cpp  bind_info_manager.cpp  connection_info.cpp  exception.cpp  node_graph.cpp  node_info.cpp  node_info_manager.cpp  node_property.cpp  primitive.cpp  socket_instance_manager.cpp  socket_property.cpp
src/yave/rts/: CMakeLists.txt  dynamic_typing.cpp  generalize.cpp  type_value.cpp
src/yave/support/: CMakeLists.txt  error.cpp  glfw_context.cpp  id.cpp  log.cpp  uuid.cpp  vulkan_context.cpp
src/yave/tools/: CMakeLists.txt  error.cpp  id.cpp  log.cpp  uuid.cpp
src/yave/ui/: CMakeLists.txt  controller.cpp  data_context.cpp  draw_list.cpp  event.cpp  focus_events.cpp  glfw_context.cpp  glfw_window.cpp  key_event_controller.cpp  key_events.cpp  layout_context.cpp  layout_scope.cpp  main_context.cpp  mouse_event_controller.cpp  mouse_events.cpp  native_window.cpp  render_buffer.cpp  render_context.cpp  render_layer.cpp  render_scope.cpp  root.cpp  shader.frag  shader.vert  staging_buffer.cpp  texture.cpp  view_context.cpp  viewport.cpp  viewport_renderer.cpp  vulkan_allocator.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_pipelines.cpp  vulkan_surface.cpp  window.cpp  window_event_controller.cpp  window_event_dispatcher.cpp  window_events.cpp  window_manager.cpp
src/yave/vulkan/: CMakeLists.txt  vulkan_context.cpp  vulkan_util.cpp
src/yave/wm/: CMakeLists.txt  draw.cpp  draw_event.cpp  event.cpp  event_dispatcher.cpp  key_event_emitter.cpp  key_events.cpp  mouse_event_emitter.cpp  mouse_events.cpp  render_context.cpp  root_window.cpp  system_events.cpp  viewoprt_events.cpp  viewport.cpp  viewport_graphics.cpp  viewport_io.cpp  viewport_io_state.cpp  viewport_window.cpp  window.cpp  window_manager.cpp  window_traverser.cpp  window_visitor.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt  node_compiler_thread.cpp  node_data_thread.cpp  project.cpp
test/backend/: CMakeLists.txt
test/core/: CMakeLists.txt
test/core/frame_buffer/: CMakeLists.txt  frame_buffer.cpp
test/core/graph/: CMakeLists.txt  graph.cpp
test/core/objects/: frame.cpp  time.cpp
test/core/rts/: CMakeLists.txt  dynamic_typing.cpp  object_ptr.cpp  static_typing.cpp
test/core/time/: CMakeLists.txt  time.cpp
test/data/: CMakeLists.txt
test/data/buffer/: CMakeLists.txt  buffer.cpp
test/data/filesystem/: CMakeLists.txt  path.cpp
test/data/frame_buffer/: CMakeLists.txt  frame_buffer.cpp
test/data/lib/: CMakeLists.txt  frame_buffer.cpp  image_blend.cpp  keyframe.cpp  time.cpp
test/data/string/: CMakeLists.txt  string.cpp
test/data/vector/: CMakeLists.txt  vector.cpp
test/editor/: CMakeLists.txt  data_context.cpp  view_context.cpp
test/frame_buffer/: frame_buffer.cpp
test/frontend/: CMakeLists.txt  node_data_thread.cpp
test/func/: CMakeLists.txt  constructor.cpp  generator.cpp
test/graph/: CMakeLists.txt  graph.cpp
test/lib/: CMakeLists.txt
test/lib/buffer/: CMakeLists.txt  buffer.cpp
test/lib/filesystem/: CMakeLists.txt  path.cpp
test/lib/frame_buffer/: CMakeLists.txt  frame_buffer.cpp  frame_buffer_manager.cpp
test/lib/graph/: CMakeLists.txt  graph.cpp
test/lib/image/: CMakeLists.txt  image_blend.cpp
test/lib/image_buffer/: CMakeLists.txt  image_buffer.cpp
test/lib/imgui/: CMakeLists.txt  button.cpp  canvas.cpp  demo.cpp  image.cpp
test/lib/keyframe/: CMakeLists.txt  keyframe.cpp
test/lib/string/: CMakeLists.txt  string.cpp
test/lib/time/: time.cpp
test/lib/vec/: vec.cpp  (+1 more)
test/media/: CMakeLists.txt  time.cpp
test/node/: CMakeLists.txt  node_graph.cpp
test/rts/: CMakeLists.txt  dynamic_typing.cpp  eval.cpp  exception.cpp  function.cpp  kinds.cpp  list.cpp  maybe.cpp  object_ptr.cpp  static_typing.cpp
test/support/: CMakeLists.txt  error.cpp  vulkan_context.cpp
test/time/: time.cpp
test/tools/: CMakeLists.txt  error.cpp
test/ui/: CMakeLists.txt  memory.cpp  signal.cpp  view_context.cpp
test/vulkan/: CMakeLists.txt  vulkan_context.cpp
test/wm/: CMakeLists.txt  viewport.cpp  window_manager.cpp
tools/: CMakeLists.txt  UUID.cpp  shader.cpp
(+978 files in other folders)
